[gd_scene load_steps=4 format=3 uid="uid://0cg4bkhm5jbt"]

[ext_resource type="Script" uid="uid://dfl222xywqq5x" path="res://scripts/skill_tree.gd" id="1_xjm4f"]
[ext_resource type="Texture2D" uid="uid://qgt4arq1g0l" path="res://assets/peach/skill_tree_background.png" id="2_petg3"]
[ext_resource type="Script" path="res://scripts/skill_tree_lines.gd" id="3_k634w"]

[node name="skill_tree_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xjm4f")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 719.0
texture = ExtResource("2_petg3")

[node name="TitleLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="PathButtons" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillTree" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lines" type="Control" parent="Control/SkillTree"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_k634w")

[node name="Nodes" type="Control" parent="Control/SkillTree"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DescriptionBox" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 806.0
offset_top = 538.0
offset_right = 924.0
offset_bottom = 639.0

[node name="DescriptionLabel" type="Label" parent="Control/DescriptionBox"]
layout_mode = 2
